[package]
name = "runwhen"
version = "0.0.5"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
description = "Runs a command on user specified triggers."
repository = "https://github.com/zaphar/runwhen"
readme = "README.md"
keywords = ["file", "watcher", "command-line", "trigger"]
license = "Apache-2.0"

[dependencies]
clap = "~2.34"
humantime = "~1.0.0"
notify = "~3.0.0"
