[package]
name = "runwhen"
version = "0.0.7"
authors = ["Jeremy Wall <jeremy@marzhillstudios.com>"]
description = "Runs a command on user specified triggers."
repository = "https://github.com/zaphar/runwhen"
readme = "README.md"
keywords = ["file", "watcher", "command-line", "trigger"]
license = "Apache-2.0"

[dependencies]
humantime = "2.1.0"
notify = "4.0.17"
glob = "0.3.1"

[dependencies.clap]
version = "3.2.17"
features = [ "cargo" ]
